fix stupid body height overflow

--- a/R.css
+++ b/R.css
@@ -29,7 +29,7 @@ html {
 
 html,
 body {
-  height: 100%;
+  min-height: 100vh;
 }
 
 body {
